2010-07-17  Vladimir Serbinenko  <phcoder@gmail.com>

	* disk/scsi.c (grub_scsi_open): Fix incorrect pointer dereference.

2010-07-14  Anton Blanchard  <anton@samba.org>

	* loader/powerpc/ieee1275/linux.c (grub_cmd_linux): Do not reject
	ET_DYN files.

2010-07-14  Grégoire Sutre  <gregoire.sutre@gmail.com>

	* Makefile.in: Use the substituted @USE_NLS@ instead of ENABLE_NLS.

2010-07-14  Grégoire Sutre  <gregoire.sutre@gmail.com>

	* kern/partition.c (grub_partition_check_containment): New function to
	check that a partition is physically contained in a parent.  Since
	offsets are relative (and non-negative), this reduces to checking that
	the partition ends before its parent.
	(grub_partition_map_probe): Discard out-of-range sub-partitions.
	(grub_partition_iterate): Likewise.
	* include/grub/partition.h (grub_partition_map): Slightly more detailed
	comments.
	* partmap/bsdlabel.c (bsdlabel_partition_map_iterate): Discard
	partitions that start before their parent, and add debug printfs.

2010-07-13  Colin Watson  <cjwatson@ubuntu.com>

	* Makefile.in (.SUFFIX): Spell correctly, as ...
	(.SUFFIXES): ... this.  Fixes bug where `make foo' (where foo is a
	bare module name without `.mod', e.g. `test') tried to invoke a
	Modula-2 compiler.

2010-07-13  Colin Watson  <cjwatson@ubuntu.com>

	* README: Point to the Info manual.

2010-07-13  Jiro SEKIBA <jir@unicus.jp>

	* fs/nilfs2.c: fix macro NILFS_2ND_SUPER_BLOCK to calculate
	2nd superblock position from partition size.

2010-07-10  Colin Watson  <cjwatson@ubuntu.com>

	* Makefile.in (MAINTAINER_CLEANFILES): Remove
	unicode/UnicodeData.txt, unicode/BidiMirroring.txt, and
	unicode/ArabicShaping.txt again; these are inputs to autogen.sh, not
	outputs.

2010-07-10  Vladimir Serbinenko  <phcoder@gmail.com>

	Restructure SCSI .id handling.
	Reported and tested by: Aleš Nesrsta.

	* disk/ata.c (grub_atapi_close): Removed. All users updated.
	(grub_atapi_dev): Changed .name to "ata". New field .id.