@@ -1,5 +1,10 @@
 2010-07-17  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* kern/partition.c [GRUB_UTIL]: Add missing util/misc.h inclusion.
+	* partmap/bsdlabel.c [GRUB_UTIL]: Likewise.
+
+2010-07-17  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* disk/scsi.c (grub_scsi_open): Fix incorrect pointer dereference.
 
 2010-07-14  Anton Blanchard  <anton@samba.org>
